# BotSpeak

./: .gitignore  CMakeLists.txt  Config.cmake.in  Makefile  README.md  idf_component.yml  package.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
docs/: int-brain-conventions.md  usage-flow.drawio
include/: BotSpeak.h  bot_speak.h  bot_speak_be.h  int_brain_messages.h
src/: BotSpeak.c  bot_speak_frame_ops.c  bot_speak_frame_ops_be.c  bot_speak_task_ops.c
test/: test.c  test_frame_ops.c  test_frame_ops_be.c  test_real_world.cpp
