<?xml version="1.0"?>
<package format="3">
  <name>botspeak</name>
  <version>0.0.0</version>
  <description>The botspeak package</description>
  <maintainer email="khandelwalkostubh@gmail.com">Kostubh Khandelwal</maintainer>
  <maintainer email="user@todo.todo">Anuj Verma</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libserial-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
